# loglens

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
docs/: USER_GUIDE.md
scripts/: install.sh
src/: app.rs  browser.rs  cli.rs  event.rs  ingest.rs  main.rs  rules.rs  signatures.rs  theme.rs  ui.rs
